      runs are packaged.  It also warns if ldconfig finds missing files.
    * New argument to r.Run(), "wrapdir" behaves similarly to "filewrap"
      but limits the scope of %(destdir)s relocation only to the directories
      under %(wrapdir)s. Works best for applications that install under one
      single directory, like /opt/<app>
  o Server Changes 
    * Packages added to the repository are checked to ensure the version and
      flavor of all referenced components are the same as for the package

Changes in 0.70.4:
  o Client Changes
    * The trove that satisfies a dependency that is broken by erase is
      now displayed in the "Troves being removed create unresolved
      dependencies" message.
    * Components are now displayed on the same line as their parent
      package in "conary update" output.
    * A new 'interactive' option has been added to conary configuration. 
      When set to true, conary will display info about clone, branch, 
      update, and erase operations, and then ask before proceding.
  o Build Changes (cvc)
    * The CompilePython action has been fixed to accept macros at the
      beginning of its arguments, fixing a bug new in Conary 0.70.3.
    * The Requires policy can now be given synthetic RPATH elements;
      this is useful when programs are only intended to be run under
      scripts that set LD_LIBRARY_PATH and so do not intrinsically have
      the information they need to find their libraries.
    * Added --test to clone, branch, and shadow commands
    * Clone now supports --skip-build-info for less rigid version checks
      on cloned troves
    * Fixed usage message to better reflect reality
    * Cloning to a branch which already has a version with a compatible
      flavor now works.
    * cpio archive files are now supported for r.addArchive()
  o Repository Changes
    * The repository now serves up stored OpenPGP keys as a "Limited
      Keyserver"; users can retrieve keys, but not search or browse them.